--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "chai": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "mocha": "^10.4.0",
     "mongodb": "^6.6.1",
-    "mongoose": "^8.3.4"
+    "mongoose": "^8.3.4",
+    "supertest": "^7.0.0"
   }
 }
